# neoguard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: instructions.md  settings.local.json
.claude/persona/: max.md
.github/workflows/: agent-chaos.yml  agent-ci.yml  agent-release.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_password_reset_tokens.py  003_dashboard_extensions.py  004_schema_hardening.py  005_dashboard_permissions.py  006_resource_changes.py  007_tag_cardinality_observations.py
deploy/: neoguard-role.yaml
docker/clickhouse/: init.sql
docker/timescaledb/: init.sql
docs/: CLAUDE_MEMORY.md  GAP_ANALYSIS.md  IMPLEMENTATION_TASKS.md  MASTER_ROADMAP.md  MASTER_TEST_REVIEW_PLAN.md  TASK_BREAKDOWN.md  VISION_FEATURES.md  api-reference.md  architecture.md  build-plan.md  cloud_migration.md  dashboard-competitive-analysis.md  dashboard-functional-test.md  data-flow.md  database-schema.md  deployment.md  feature_flags.md  integration-map.md  onboarding.md  platform-audit.md  project-documentation.md  project-structure.md  risks.md  test-inventory.md  testing.md  todo.md
docs/adr/: 0001-stack-selection.md  0002-architecture-topology.md  0004-id-format-coexistence.md  0005-design-system-scss-tokens.md  0006-api-key-hash-versioned-format.md  001-architecture-overview.md  001-multi-tenancy-architecture.md
docs/research/: dashboard-competitive-analysis.md
docs/review/: FINDINGS.md  REVIEW_PROCESS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.unit.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/cft/: neoguard-collector-role.yaml
neo-metrics-exporter/: .dockerignore  CHANGELOG.md  CLAUDE_EXECUTION_HOOKS.md  Dockerfile  Dockerfile.test  EXECUTION_CHANGELOG.md  FINDINGS.md  LICENSE  Makefile  PHASE_TRACKER.md  README.md  TICKETS.md  agent.yaml  go.mod  go.sum  mock-ingest.py  nfpm.yaml  test-config.yaml
neo-metrics-exporter/deploy/: install-remote.sh  install.sh  neoguard-agent.service  postinstall.sh  preinstall.sh  preremove.sh
neo-metrics-exporter/docs/: SECTION_10_ANSWERS.md  architecture.md  cardinality.md  cli.md  compliance.md  configuration.md  correlation_contract.md  dependencies.md  deployment.md  execution_plan.md  getting-started.md  log-collection.md  log_pipeline_contract.md  metrics.md  sales-enablement.md  scaling.md  security.md  sop.md  strategy.md  testing.md  troubleshooting.md  upgrading.md
src/neoguard/: main.py
templates/: neoguard-monitoring-role.json  neoguard-monitoring-role.yaml
tests/: conftest.py
tests/functional/: test_full_functional.py  test_onboarding_functional.py  test_plan.py  test_rbac.py
tests/integration/: test_api.py
tests/unit/: test_admin_routes.py  test_admin_service.py  test_alert_engine.py  test_alert_engine_b1.py  test_annotation_routes.py  test_annotations.py  test_auth.py  test_auth_models.py  (+77 more)
(+771 files in other folders)
